--- a/AIO Memepack.csproj
+++ b/AIO Memepack.csproj
@@ -139,5 +139,10 @@
   <ItemGroup>
     <Content Include="ItemIds.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Thunderstore\CHANGELOG.md" />
+    <None Include="Thunderstore\manifest.json" />
+    <None Include="Thunderstore\README.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
